unpackaged/objects/redwing__Learning_Category__c.object
<CustomObject>
    <fields>
        <fullName>redwing__Background_Image_URL__c</fullName>
        <inlineHelpText>URL for the image displayed in the catalog detail header</inlineHelpText>
        <label>Background Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>redwing__Enable_all_external_accounts__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enabling this checkbox will expose this catalog to all external (Community/Portal) users</inlineHelpText>
        <label>Enable for all external users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Hide_From_Catalog_Home__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this option if you do not want to display this catalog in the catalog home page</inlineHelpText>
        <label>Hide from Catalog Home</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Is_Internal__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this option if you do not want to display this catalog to external users</inlineHelpText>
        <label>Is Internal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Limit_Internal_Visibility__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this option to limit visibility in Catalog Homepage to specific Profiles/Groups defined in the Catalog</inlineHelpText>
        <label>Limit Internal Visibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Logo__c</fullName>
        <inlineHelpText>URL for the image displayed for this catalog in the catalog page</inlineHelpText>
        <label>Logo</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>redwing__Order__c</fullName>
        <inlineHelpText>Number that defines the position in which this catalog will appear in the catalog page</inlineHelpText>
        <label>Order</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__Text_Color__c</fullName>
        <inlineHelpText>HEX Color code for the header text color (e.g. #333333, more examples in : http://www.color-hex.com/)</inlineHelpText>
        <label>Text Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Total_Training_Plans__c</fullName>
        <label>Total Learning Plans</label>
        <summaryForeignKey>redwing__Training_Plan_Category__c.redwing__Learning_Category__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Catalog</label>
    <listViews>
        <fullName>redwing__All</fullName>
        <columns>NAME</columns>
        <columns>redwing__Enable_all_external_accounts__c</columns>
        <columns>redwing__Total_Training_Plans__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Catalog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Catalogs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>